--- a/step02_intermediate/session_01.ipynb
+++ b/step02_intermediate/session_01.ipynb
@@ -832,6 +832,21 @@
     "ORDER BY Event ASC;\n",
     "```\n",
     "```\n",
+    "                       event                       | page \n",
+    "---------------------------------------------------+------\n",
+    " + 100KG                                           |    1\n",
+    " + 100KG (Heavyweight)                             |    1\n",
+    " + 100KG (Super Heavyweight)                       |    1\n",
+    " + 105KG                                           |    1\n",
+    " + 108KG Total (Super Heavyweight)                 |    1\n",
+    " + 110KG Total (Super Heavyweight)                 |    1\n",
+    " + 67 KG                                           |    2\n",
+    " + 71.67KG (Heavyweight)                           |    2\n",
+    " + 72KG (Heavyweight)                              |    2\n",
+    " + 73KG (Heavyweight)                              |    2\n",
+    " + 75KG                                            |    2\n",
+    " + 78KG                                            |    2\n",
+    " + 78KG (Heavyweight)                              |    3\n",
     "\n",
     "```\n",
     "\n",
@@ -852,6 +867,16 @@
     "  NTILE(3) OVER (ORDER BY Medals DESC) AS Third\n",
     "FROM Athlete_Medals\n",
     "ORDER BY Medals DESC, Athlete ASC;\n",
+    "```\n",
+    "```\n",
+    "               athlete                | medals | third \n",
+    "--------------------------------------+--------+-------\n",
+    " PHELPS Michael                       |     22 |     1\n",
+    " LATYNINA Larisa                      |     18 |     1\n",
+    " ANDRIANOV Nikolay                    |     15 |     1\n",
+    " MANGIAROTTI Edoardo                  |     13 |     1\n",
+    "\n",
+    "\n",
     "```\n",
     "\n",
     "- 각 그룹의 평균을 반환합니다.\n",
@@ -879,7 +904,49 @@
     "ORDER BY Third ASC;\n",
     "```\n",
     "```\n",
-    "```"
+    " third |     avg_medals     \n",
+    "-------+--------------------\n",
+    "     1 | 3.7864464692482916\n",
+    "     2 | 2.0000000000000000\n",
+    "     3 | 2.0000000000000000\n",
+    "(3 rows)\n",
+    "\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pivot\n",
+    "- SQL을 통해 Pivot 테이블을 만들어 보도록 합니다. \n",
+    "\n",
+    "```SQL\n",
+    "CREATE EXTENSION IF NOT EXISTS tablefunc;\n",
+    "\n",
+    "SELECT * FROM CROSSTAB($$\n",
+    "  SELECT\n",
+    "    Gender, Year, Country\n",
+    "  FROM summer_medals\n",
+    "  WHERE\n",
+    "    Year IN (2008, 2012)\n",
+    "    AND Medal = 'Gold'\n",
+    "    AND Event = 'Pole Vault'\n",
+    "  ORDER By Gender ASC, Year ASC;\n",
+    "$$) AS ct (Gender character varying(10), -- 인코딩이 일치해야 합니다. \n",
+    "           \"2008\" character(6),\n",
+    "           \"2012\" character(6))\n",
+    "ORDER BY Gender ASC;\n",
+    "```\n",
+    "```\n",
+    " gender |  2008  |  2012  \n",
+    "--------+--------+--------\n",
+    " Men    | AUS    | FRA   \n",
+    " Women  | RUS    | USA   \n",
+    "(2 rows)\n",
+    "\n",
+    "```\n",
+    "\n"
    ]
   }
  ],
@@ -899,7 +966,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.7"
   }
  },
  "nbformat": 4,
