--- a/step02_intermediate/session_02.ipynb
+++ b/step02_intermediate/session_02.ipynb
@@ -216,19 +216,22 @@
     "FROM summer_medals\n",
     "WHERE \n",
     "\tCountry IN ('CHN', 'RUS', 'KOR')\n",
-    "\tAND Year IN (2008, 2012)\n",
-    "\tAND Medal = 'Gold'\n",
+    "\tAND Year IN (2004, 2008, 2012)\n",
+    "\tAND Medal = 'Gold' AND Sport = 'Gymnastics'\n",
     "GROUP BY Country, Year\n",
-    "ORDER BY Country ASC, Year ASC;\n",
+    "ORDER BY Country ASC, YEAR ASC;\n",
+    "```\n",
+    "```\n",
     " country | year | awards \n",
     "---------+------+--------\n",
-    " CHN     | 2008 |     74\n",
-    " CHN     | 2012 |     56\n",
-    " KOR     | 2008 |     41\n",
-    " KOR     | 2012 |     18\n",
-    " RUS     | 2008 |     43\n",
-    " RUS     | 2012 |     47\n",
-    "(6 rows)\n",
+    " CHN     | 2004 |      1\n",
+    " CHN     | 2008 |     21\n",
+    " CHN     | 2012 |      9\n",
+    " KOR     | 2012 |      1\n",
+    " RUS     | 2004 |      7\n",
+    " RUS     | 2008 |      7\n",
+    " RUS     | 2012 |      8\n",
+    "(7 rows)\n",
     "\n",
     "```\n",
     "\n",
@@ -241,7 +244,7 @@
     "\t\t\tCountry, Year, COUNT(*) AS Awards\n",
     "\t\tFROM summer_medals\n",
     "\t\tWHERE \n",
-    "\t\t\tCountry IN ('CHN', 'RUS', 'USA')\n",
+    "\t\t\tCountry IN ('CHN', 'RUS', 'KOR')\n",
     "\t\t\tAND Year IN (2004, 2008, 2012)\n",
     "\t\t\tAND Medal = 'Gold' AND Sport = 'Gymnastics'\n",
     "\t\tGROUP BY Country, Year\n",
@@ -257,14 +260,14 @@
     "\t  , \"2004\" INTEGER\n",
     "\t  , \"2008\" INTEGER\n",
     "\t  , \"2012\" INTEGER);\n",
-    "            \n",
+    "```\n",
+    "```\n",
     " country | 2004 | 2008 | 2012 \n",
     "---------+------+------+------\n",
-    " CHN     |    3 |    1 |    1\n",
+    " CHN     |    2 |    1 |    1\n",
+    " KOR     |    3 |      |     \n",
     " RUS     |    1 |    2 |    2\n",
-    " USA     |    2 |    3 |    3\n",
     "(3 rows)\n",
-    "\n",
     "```"
    ]
   }
