--- a/step01_basic/session05_subquery.ipynb
+++ b/step01_basic/session05_subquery.ipynb
@@ -289,13 +289,13 @@
     "SELECT name, continent, inflation_rate\n",
     "  -- From countries\n",
     "  FROM countries\n",
-    "\t-- Join to economies\n",
+    "\t-- INNER JOIN economies\n",
     "\tINNER JOIN economies\n",
-    "\t-- Match on code\n",
+    "\t-- ON\n",
     "\t___\n",
     "  -- Where year is 2015\n",
     "  WHERE year = 2015\n",
-    "    -- And inflation rate in subquery (alias as subquery)\n",
+    "    -- (alias as subquery)\n",
     "    ___ ___ ___ (\n",
     "        SELECT MAX(inflation_rate) AS max_inf\n",
     "        FROM (\n",
