--- a/step02_intermediate/session_01.ipynb
+++ b/step02_intermediate/session_01.ipynb
@@ -722,7 +722,10 @@
     "  Country,\n",
     "  -- Rank athletes in each country by the medals they've won\n",
     "  Athlete,\n",
+    "  Medals, \n",
     "  DENSE_RANK() OVER (PARTITION BY Country\n",
+    "                         ORDER BY Medals DESC) AS Dense_Rank_N, \n",
+    "  RANK() OVER (PARTITION BY Country\n",
     "                         ORDER BY Medals DESC) AS Rank_N\n",
     "FROM Athlete_Medals\n",
     "ORDER BY Country ASC, RANK_N ASC;\n",
@@ -944,9 +947,51 @@
     " Men    | AUS    | FRA   \n",
     " Women  | RUS    | USA   \n",
     "(2 rows)\n",
-    "\n",
     "```\n",
-    "\n"
+    "\n",
+    "```SQL\n",
+    "-- CREATE EXTENSION IF NOT EXISTS tablefunc;\n",
+    "\n",
+    "-- SELECT Sport FROM summer_medals WHERE Sport = 'Gymnastics';\n",
+    "\n",
+    "SELECT * FROM CROSSTAB($$\n",
+    "  WITH temp_medals AS (\n",
+    "    SELECT\n",
+    "      Country,\n",
+    "      Year,\n",
+    "      COUNT(*) AS Medal_counts\n",
+    "    FROM Summer_Medals\n",
+    "    WHERE\n",
+    "      Country IN ('CHN', 'KOR', 'RUS')\n",
+    "      AND Year IN (2004, 2008, 2012)\n",
+    "      AND Medal = 'Gold'\n",
+    "\t  AND Sport = 'Gymnastics'\n",
+    "    GROUP BY Country, Year)\n",
+    "\n",
+    "  SELECT\n",
+    "    Country,\n",
+    "    Year,\n",
+    "    RANK() OVER\n",
+    "      (PARTITION BY Year\n",
+    "       ORDER BY Medal_counts DESC)::INTEGER AS rank\n",
+    "  FROM temp_medals\n",
+    "  ORDER BY Country ASC, Year ASC;\n",
+    "\t\t\t\t\t   \n",
+    "$$) AS ct (Country character(6),\n",
+    "           \"2004\" INTEGER,\n",
+    "           \"2008\" INTEGER,\n",
+    "           \"2012\" INTEGER)\n",
+    "Order by Country ASC;\n",
+    "```\n",
+    "```\n",
+    " country | 2004 | 2008 | 2012 \n",
+    "---------+------+------+------\n",
+    " CHN     |    2 |    1 |    1\n",
+    " KOR     |    3 |      |     \n",
+    " RUS     |    1 |    2 |    2\n",
+    "(3 rows)\n",
+    "\n",
+    "```\n"
    ]
   }
  ],
