--- a/step02_intermediate/session_04_explain.ipynb
+++ b/step02_intermediate/session_04_explain.ipynb
@@ -9,7 +9,7 @@
     "```SQL\n",
     "CREATE TABLE temp (id serial, name text);\n",
     "INSERT INTO temp (name) SELECT 'hans' FROM generate_series(1, 2000000);\n",
-    "INSERT INTO t_test (name) SELECT 'paul' FROM generate_series(1, 2000000);\n",
+    "INSERT INTO temp (name) SELECT 'paul' FROM generate_series(1, 2000000);\n",
     "```\n",
     "\n",
     "```SQL\n",
@@ -21,7 +21,7 @@
     "- 이 비용은 GPU 또는 CPU 자원 소모를 의미 함. \n",
     "\n",
     "```SQL\n",
-    "EXPLAIN SELECT * FROM t_test WHERE id = 432332;\n",
+    "EXPLAIN SELECT * FROM temp WHERE id = 432332;\n",
     "                              QUERY PLAN                               \n",
     "-----------------------------------------------------------------------\n",
     " Gather  (cost=1000.00..43455.43 rows=1 width=9)\n",
